--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/requirements.txt.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/requirements.txt.template
@@ -1,11 +1,11 @@
 {% load forge %}
-{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image or object.algorithm_input_sockets|has_dicom_image_set or object.algorithm_output_sockets|has_dicom_image_set %}
+{% if object.algorithm_input_sockets|has_image_kind or object.algorithm_output_sockets|has_image_kind %}
 numpy
 {% endif %}
-{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image %}
+{% if object.algorithm_input_sockets|has_panimg_kind or object.algorithm_output_sockets|has_panimg_kind %}
 SimpleITK
 {% endif %}
-{% if object.algorithm_input_sockets|has_dicom_image_set or object.algorithm_output_sockets|has_dicom_image_set %}
+{% if object.algorithm_input_sockets|has_dicom_image_kind or object.algorithm_output_sockets|has_dicom_image_kind %}
 pydicom
 # Required to decompress some DICOM transfer syntaxes
 pylibjpeg
