--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/evaluate.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/evaluate.py.template
@@ -29,14 +29,14 @@ https://grand-challenge.org/documentation/runtime-environment/
 Happy programming!
 """
 import json
-{% if object.algorithm_output_sockets|has_image or object.evaluation_additional_inputs|has_image or object.evaluation_additional_outputs|has_image  %}
+{% if object.algorithm_output_sockets|has_panimg_kind or object.evaluation_additional_inputs|has_panimg_kind or object.evaluation_additional_outputs|has_panimg_kind  %}
 from glob import glob
 import SimpleITK
 {% endif %}
-{% if object.algorithm_output_sockets|has_image or object.algorithm_output_sockets|has_file or object.evaluation_additional_inputs|has_file %}
+{% if object.algorithm_output_sockets|has_panimg_kind or object.algorithm_output_sockets|has_file_kind or object.evaluation_additional_inputs|has_file_kind %}
 import re
 {% endif %}
-{% if object.evaluation_additional_outputs|has_image %}
+{% if object.evaluation_additional_outputs|has_image_kind %}
 import numpy
 {% endif %}
 import random
@@ -124,28 +124,26 @@ def main():
             {% else %}
                 {{ socket.example_value }}
             {% endif %}
-        {% elif socket.is_image %} numpy.eye(4, 2)
-        {% elif socket.is_json %} {"content": "should match the required format"}
-        {% elif socket.is_file %} "content: should match the required format"
+        {% elif socket.is_panimg_kind %} numpy.eye(4, 2)
+        {% elif socket.is_json_kind %} {"content": "should match the required format"}
+        {% elif socket.is_file_kind %} "content: should match the required format"
         {% endif %}
         {% endspaceless %}
     {% endfor %}
 
     # Save your output
     {% for socket in object.evaluation_additional_outputs  %}
-    {% if socket.is_image %}
+    {% if socket.is_panimg_kind %}
     write_array_as_image_file(
         location=OUTPUT_DIRECTORY / "{{ socket.relative_path }}",
         array=output_{{ socket.slug|dash_to_underscore }},
     )
-    {% endif %}
-    {% if socket.is_json %}
+    {% elif socket.is_json_kind %}
     write_json_file(
         location=OUTPUT_DIRECTORY / "{{ socket.relative_path }}",
         content=output_{{ socket.slug|dash_to_underscore }}
     )
-    {% endif %}
-    {% if socket.is_file %}
+    {% elif socket.is_file_kind %}
     write_file(
         location=OUTPUT_DIRECTORY / "{{ socket.relative_path }}",
         content=output_{{ socket.slug|dash_to_underscore }}
@@ -172,17 +170,15 @@ def process(job):
     # Read additional inputs from the submission
 
     {% for socket in object.evaluation_additional_inputs %}
-    {% if socket.is_image %}
+    {% if socket.is_panimg_kind %}
     submission_{{ socket.slug|dash_to_underscore }} = load_image_file_as_array(
         location=INPUT_DIRECTORY / "{{ socket.relative_path }}",
     )
-    {% endif %}
-    {% if socket.is_json %}
+    {% elif socket.is_json_kind %}
     submission_{{ socket.slug|dash_to_underscore }} = load_json_file(
         location=INPUT_DIRECTORY / "{{ socket.relative_path }}",
     )
-    {% endif %}
-    {% if socket.is_file %}
+    {% elif socket.is_file_kind %}
     submission_{{ socket.slug|dash_to_underscore }} = load_file(
         location=INPUT_DIRECTORY / "{{ socket.relative_path }}",
     )
@@ -224,17 +220,15 @@ def process_{{ interface_name }}(job,
 
     # Secondly, read the results
     {% for socket in interface.outputs %}
-    {% if socket.is_image %}
+    {% if socket.is_panimg_kind %}
     result_{{ socket.slug|dash_to_underscore }} = load_image_file_as_array(
         location=location_{{ socket.slug|dash_to_underscore }},
     )
-    {% endif %}
-    {% if socket.is_json %}
+    {% elif socket.is_json_kind %}
     result_{{ socket.slug|dash_to_underscore }} = load_json_file(
         location=location_{{ socket.slug|dash_to_underscore }},
     )
-    {% endif %}
-    {% if socket.is_file %}
+    {% elif socket.is_file_kind %}
     result_{{ socket.slug|dash_to_underscore }} = load_file(
         location=location_{{ socket.slug|dash_to_underscore }},
     )
@@ -244,13 +238,12 @@ def process_{{ interface_name }}(job,
 
     # Thirdly, retrieve the input file name to match it with your ground truth
     {% for socket in interface.inputs %}
-    {% if socket.is_image %}
+    {% if socket.is_panimg_kind or socket.is_dicom_image_kind %}
     image_name_{{ socket.slug|dash_to_underscore }} = get_image_name(
             values=job["inputs"],
             slug="{{ socket.slug }}",
     )
-    {% endif %}
-    {% if socket.is_file %}
+    {% elif socket.is_file_kind %}
     file_name_{{ socket.slug|dash_to_underscore }} = get_file_name(
             values=job["inputs"],
             slug="{{ socket.slug }}",
@@ -296,7 +289,7 @@ def get_interface_key(job):
     socket_slugs = [sv["socket"]["slug"] for sv in job["inputs"]]
     return tuple(sorted(socket_slugs))
 
-{% if object.algorithm_input_sockets|has_image or object.evaluation_additional_inputs|has_image %}
+{% if object.algorithm_input_sockets|has_image_kind or object.evaluation_additional_inputs|has_image_kind %}
 def get_image_name(*, values, slug):
     # This tells us the user-provided name of the input or output image
     for value in values:
@@ -307,7 +300,7 @@ def get_image_name(*, values, slug):
 {% endif %}
 
 
-{% if object.algorithm_input_sockets|has_file or object.evaluation_additional_inputs|has_file %}
+{% if object.algorithm_input_sockets|has_file_kind or object.evaluation_additional_inputs|has_file_kind %}
 def get_file_name(*, values, slug):
     # This tells us the user-provided name of the input file
     for value in values:
@@ -343,7 +336,7 @@ def load_json_file(*, location):
     with open(location) as f:
         return json.loads(f.read())
 
-{% if object.algorithm_output_sockets|has_image or object.evaluation_additional_inputs|has_image%}
+{% if object.algorithm_output_sockets|has_panimg_kind or object.evaluation_additional_inputs|has_panimg_kind %}
 def load_image_file_as_array(*, location):
     # Use SimpleITK to read a file
     input_files = glob(str(location / "*.tiff")) + glob(str(location / "*.mha"))
@@ -353,7 +346,7 @@ def load_image_file_as_array(*, location):
     return SimpleITK.GetArrayFromImage(result)
 {% endif %}
 
-{% if object.algorithm_output_sockets|has_file or object.evaluation_additional_inputs|has_file %}
+{% if object.algorithm_output_sockets|has_file_kind or object.evaluation_additional_inputs|has_file_kind %}
 def load_file(*, location):
     # Reads the content of a file
     with open(location) as f:
@@ -365,14 +358,14 @@ def write_metrics(*, metrics):
     # Write a json document used for ranking results on the leaderboard
     write_json_file(location=OUTPUT_DIRECTORY / "metrics.json", content=metrics)
 
-{% if object.evaluation_additional_outputs|has_file %}
+{% if object.evaluation_additional_outputs|has_file_kind %}
 def write_file(*, location, content):
     # Write the content to a file
     with open(location, 'w') as f:
         return f.write(content)
 {% endif %}
 
-{% if object.evaluation_additional_outputs|has_image %}
+{% if object.evaluation_additional_outputs|has_panimg_kind %}
 def write_array_as_image_file(*, location, array):
     location.mkdir(parents=True, exist_ok=True)
 
