--- a/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/requirements.txt.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_evaluation_method/requirements.txt.template
@@ -1,5 +1,5 @@
 {% load forge %}
-{% if object.algorithm_input_sockets|has_image or object.algorithm_output_sockets|has_image or object.evaluation_additional_inputs|has_image or object.evaluation_additional_outputs|has_image %}
+{% if object.algorithm_input_sockets|has_panimg_kind or object.algorithm_output_sockets|has_panimg_kind or object.evaluation_additional_inputs|has_panimg_kind or object.evaluation_additional_outputs|has_panimg_kind %}
 SimpleITK
 numpy
 {% endif %}
