--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,10 @@ jobs:
               run: |
                 sudo apt-get update
                 sudo apt-get install -y libcurl4-openssl-dev libssl-dev
-            - name: Pull the pytorch container
-              run: docker pull --platform=linux/amd64 pytorch/pytorch
+            - name: Pull the algorithm-example base container
+              run: |
+                docker pull --platform=linux/amd64 \
+                pytorch/pytorch:2.9.1-cuda12.6-cudnn9-runtime
             - name: Run the forge integration tests
               run: |
                 cd app
