Restructure templates with isort and partials

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ dependencies = [
     "django-pictures",
     # Requirements for forge
     "black",
+    "isort",
 ]
 name = "grand-challenge.org"
 version = "0.1.0"
