--- a/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
+++ b/app/grandchallenge/forge/templates/forge/partials/example_algorithm/inference.py.template
@@ -25,15 +25,8 @@ from pathlib import Path
 import json
 import torch
 
-{% if object.algorithm_input_sockets|has_image_kind or object.algorithm_output_sockets|has_image_kind %}
-from glob import glob
+{% if object.algorithm_output_sockets|has_image_kind %}
 import numpy
-{% endif %}
-{% if object.algorithm_input_sockets|has_panimg_kind or object.algorithm_output_sockets|has_panimg_kind %}
-import SimpleITK
-{% endif %}
-{% if object.algorithm_input_sockets|has_dicom_image_kind or object.algorithm_output_sockets|has_dicom_image_kind %}
-import pydicom
 {% endif %}
 
 INPUT_PATH = Path("/input")
@@ -147,122 +140,34 @@ def get_interface_key():
     socket_slugs = [sv["socket"]["slug"] for sv in inputs]
     return tuple(sorted(socket_slugs))
 
-def load_json_file(*, location):
-    # Reads a json file
-    with open(location, 'r') as f:
-        return json.loads(f.read())
+{% include "forge/partials/functions/load_json.py" %}
 
 {% if object.algorithm_output_sockets|has_json_kind %}
-def write_json_file(*, location, content):
-    # Writes a json file
-    with open(location, 'w') as f:
-        f.write(json.dumps(content, indent=4))
+{% include "forge/partials/functions/write_json.py" %}
 {% endif %}
 
 {% if object.algorithm_input_sockets|has_panimg_kind %}
-def load_image_file_as_array(*, location):
-    # Use SimpleITK to read a file
-    input_files = glob(str(location / "*.tif")) + glob(str(location / "*.tiff")) + glob(str(location / "*.mha"))
-    result = SimpleITK.ReadImage(input_files[0])
-
-    # Convert it to a Numpy array
-    return SimpleITK.GetArrayFromImage(result)
+{% include "forge/partials/functions/load_image.py" %}
 {% endif %}
-
 
 {% if object.algorithm_input_sockets|has_dicom_image_kind %}
-def load_dicom_image_set_as_array(*, location):
-    # Get all DICOM files in the directory
-    dicom_files = glob(str(location / "*.dcm"))
-
-    # Read all slices
-    slices = [pydicom.dcmread(f, force=True) for f in dicom_files]
-    decompressed_slices = [slice.decompress() for slice in slices]
-
-    # Extracting pixel-data is non-trivial:
-    # - Slices need to be sorted in case of a 3D volume or 4D volume
-    # - Pixel data will need to be decompressed, supporting different transfer syntaxes
-    # - Any required transformations need to be performed (e.g. scaling via RescaleIntercept/RescaleSlope)
-    # - ... et cetera
-    # Please refer to Pydicom's documentation: https://pydicom.github.io/pydicom/1.1/pydicom_user_guide.html
-
-    # Here we'll just return a null array with an approximately correct shape
-    if len(dicom_files) > 2:
-        result = numpy.array([[[0]]]) # 3D
-    else:
-        result = numpy.array([[0]]) # 2D
-
-    return result
+{% include "forge/partials/functions/load_dicom_image.py" %}
 {% endif %}
 
-
 {% if object.algorithm_output_sockets|has_panimg_kind %}
-def write_array_as_image_file(*, location, array):
-    location.mkdir(parents=True, exist_ok=True)
-
-    # You may need to change the suffix to .tif to match the expected output
-    suffix = ".mha"
-
-    image = SimpleITK.GetImageFromArray(array)
-    SimpleITK.WriteImage(
-        image,
-        location / f"output{suffix}",
-        useCompression=True,
-    )
+{% include "forge/partials/functions/write_image.py" %}
 {% endif %}
 
 {% if object.algorithm_output_sockets|has_dicom_image_kind %}
-def write_array_as_dicom_image_set(*, location, array):
-    location.mkdir(parents=True, exist_ok=True)
-
-    # Writing DICOM Image data correctly is non-trivial!
-
-    # Below is a minimal and incomplete example that requires
-    # many additional basic-image attributes to be added
-    # still
-
-    ds = pydicom.Dataset()
-
-    # Required meta info
-    ds.file_meta = pydicom.dataset.FileMetaDataset()
-    ds.file_meta.TransferSyntaxUID = pydicom.uid.ExplicitVRLittleEndian
-
-
-    # Basic image attributes
-    ds.Rows, ds.Columns = array.shape
-    ds.SamplesPerPixel = 1
-    ds.PhotometricInterpretation = "MONOCHROME2"
-    ds.BitsAllocated = array.dtype.itemsize * 8
-    ds.BitsStored = ds.BitsAllocated
-    ds.HighBit = ds.BitsAllocated - 1
-    ds.PixelRepresentation = 0   # 0 = unsigned
-
-    # Pixel data
-    ds.PixelData = array.tobytes()
-
-    # Save
-    pydicom.dcmwrite(location / "output.dcm", ds)
+{% include "forge/partials/functions/write_dicom_image.py" %}
 {% endif %}
 
 {% if object.algorithm_input_sockets|has_file_kind %}
-# Note to the developer:
-#   the following function is very generic and should likely
-#   be adopted to something more specific for your algorithm/challenge
-def load_file(*, location):
-    # Reads the content of a file
-    with open(location) as f:
-        return f.read()
+{% include "forge/partials/functions/load_file.py" %}
 {% endif %}
 
-
 {% if object.algorithm_output_sockets|has_file_kind %}
-# Note to the developer:
-#   the following function is very generic and should likely
-#   be adopted to something more specific for your algorithm/challenge
-def write_file(*, location, content):
-    # Write the content to a file
-    with open(location, 'w') as f:
-        return f.write(content)
+{% include "forge/partials/functions/write_file.py" %}
 {% endif %}
 
 
